--- a/yuvaraj-ravichandran.tex
+++ b/yuvaraj-ravichandran.tex
@@ -92,15 +92,16 @@
   \href{https://www.linkedin.com/in/yuvarajravichandran}{www.linkedin.com/in/yuvarajravichandran} & Mobile : \href{tel:\mobile}{\mobile} \\
 \end{tabular*}
 
-
-%-----------EDUCATION-----------------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Sona College of Technology}{Salem, Tamilnadu, India}      
-      {Bachelor of Engineering in Electrical and Electronics;  CGPA: 8.77/10}{2007 -- 2011}
-  \resumeSubHeadingListEnd
-
+% --------PROGRAMMING SKILLS------------
+\section{Programming Skills}
+ \resumeSubHeadingListStart
+   \item{
+     \textbf{Languages}{: Java, Javascript}
+   }
+   \item{
+    \textbf{Technologies}{: Spring, Apache Storm, Apache Cassandra, Apache Kafka, Elastic Stack (ELK), RocksDB, TeamCity, IBM UrbanCode Deploy, MSSQL, Oracle, HTML/CSS}
+  }
+ \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
@@ -194,17 +195,13 @@
 %   \resumeSubHeadingListEnd
 
 
-% --------PROGRAMMING SKILLS------------
-\section{Programming Skills}
- \resumeSubHeadingListStart
-   \item{
-     \textbf{Languages}{: Java, Javascript, SQL}
-   }
-   \item{
-    \textbf{Technologies}{: MSSQL, Oracle, Spring, Apache Storm, Apache Cassandra, Apache Kafka, Elastic Stack (ELK), RocksDB, TeamCity, IBM UrbanCode Deploy}
-  }
- \resumeSubHeadingListEnd
-
+%-----------EDUCATION-----------------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Sona College of Technology}{Salem, Tamilnadu, India}      
+      {Bachelor of Engineering in Electrical and Electronics;  CGPA: 8.77/10}{2007 -- 2011}
+  \resumeSubHeadingListEnd
 
 %-------------------------------------------
 \end{document}
