Small update and font change

--- a/yuvaraj-ravichandran.tex
+++ b/yuvaraj-ravichandran.tex
@@ -1,5 +1,8 @@
 \documentclass[letterpaper,11pt]{article}
 
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
+
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
 \usepackage{titlesec}
@@ -34,8 +37,8 @@
 
 % Sections formatting
 \titleformat{\section}{
-  \vspace{-4pt}\scshape\raggedright\large
-}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
+  \vspace{-4pt}\bfseries\raggedright\large\color{MidnightBlue}
+}{}{0em}{}[\hrule height 1pt \vspace{-5pt}]
 
 % Ensure that generate pdf is machine readable/ATS parsable
 \pdfgentounicode=1
@@ -109,10 +112,10 @@
 
     \resumeSubheading
       {Barclays Global Service Centre Pvt. Ltd.}{Chennai, Tamilnadu, India}
-      {AVP}{Feb. 2020 ‑ Present}
+      {AVP}{Feb 2020 - Mar 2024}
       \resumeItemListStart
         \resumeItem
-          {Developed high performance in house reconciliation product from scratch in a fast paced environment. I have handled design and architecture of core components including in-memory matching engine, ETL layer to name a few. Due to low latency, we were able to reduce the runtime of existing high volume reconciliations, which were running on market leading legacy systems, from hours to mins. This helps the bank greatly to find and mitigate risks faster. And this is considered as a strategic tool to replace existing licensed ones across the bank}
+          {Built a high performance in house reconciliation product from scratch in a fast paced environment. I have handled design and architecture of core components including in-memory matching engine, ETL layer to name a few. Due to low latency, we were able to reduce the runtime of existing high volume reconciliations, which were running on market leading legacy systems, from hours to mins. This helps the bank greatly to find and mitigate risks faster. And this is considered as a strategic tool to replace existing licensed ones across the bank}
         \resumeItem
           {Managed a team of 8 engineers including vendors with focus on high quality deliveries on time. I have involved in task assignments, design discussion and mentoring them on implementation specifics}
         \resumeItem
@@ -138,16 +141,16 @@
 
     \resumeSubheading
       {Citicorp Services India Pvt. Ltd.}{Chennai, Tamilnadu, India}
-      {Application Developer Intermediate Programmer Analyst}{Oct. 2016 ‑ Feb. 2020}
+      {Application Developer Intermediate Programmer Analyst}{Oct 2016 - Feb 2020}
       \resumeItemListStart
         \resumeItem
-          {Developed real‑time reconciliation data processing system using Lambda architecture to crunch billions of records}
+          {Developed real-time reconciliation data processing system using Lambda architecture to crunch billions of records}
         \resumeItem
           {Redesigned matching layer to achieve 12k messages/sec with sub milli second latency using space based architecture using distributed data grid like Hazelcast}
         \resumeItem
           {Migrated the transformation layer from batch to streaming platform (Storm/Kafka) to provide 6X performance}
         \resumeItem
-          {I have been part of design and development of real‑time break management system using Elastic stack to reduce report timing from minutes to seconds}
+          {I have been part of design and development of real-time break management system using Elastic stack to reduce report timing from minutes to seconds}
         \resumeItem
           {Designed and Implemented the initial version of CI/CD pipeline using TeamCity and Urbancode Deploy}
         \resumeItem
@@ -155,8 +158,8 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Infrasoft Technologies Ltd. (Client ‑ BNP Paribas Securities Ltd.)}{Chennai, Tamilnadu, India}
-      {Senior Associate Consultant}{Sep. 2015 ‑ Oct. 2016}
+      {Infrasoft Technologies Ltd. (Client - BNP Paribas Securities Ltd.)}{Chennai, Tamilnadu, India}
+      {Senior Associate Consultant}{Sep 2015 - Oct 2016}
       \resumeItemListStart
         \resumeItem
           {Implemented multiple new features to collect and process SWIFT messages from multiple sources every day}
@@ -166,7 +169,7 @@
 
     \resumeSubheading
       {BNY Mellon Technology Pvt. Ltd. (Inautix)}{Chennai, Tamilnadu, India}
-      {Senior Application Developer}{Aug. 2011 ‑ Sep. 2015}
+      {Senior Application Developer}{Aug 2011 - Sep 2015}
       \resumeItemListStart
         \resumeItem
           {Developed template configuration management system to ease the initial account setup process}
@@ -200,7 +203,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Sona College of Technology}{Salem, Tamilnadu, India}      
-      {Bachelor of Engineering in Electrical and Electronics;  CGPA: 8.77/10}{2007 -- 2011}
+      {Bachelor of Electrical and Electronics Engineering with 8.77 CGPA}{2007 - 2011}
   \resumeSubHeadingListEnd
 
 %-------------------------------------------
